DO328/solutions/release-canary/virtual-service-v3.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vertx-greet
spec:
  gateways:
  - vertx-greet-gateway
  hosts:
  - '*'
  http:
  - route:
    - destination:
        host: vertx-greet
        port:
          number: 8080
        subset: v1
      weight: 10
    - destination:
        host: vertx-greet
        port:
          number: 8080
        subset: v2
      weight: 88
    - destination:
        host: vertx-greet
        port:
          number: 8080
        subset: v3
      weight: 2
